correct error on mobile

--- a/_scss/_custom.scss
+++ b/_scss/_custom.scss
@@ -491,26 +491,12 @@ a:hover{
 }
 
 .bgplyer{
-  height: 100vh;
-  width: auto;
-  background: no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background-color: black;
+  background-position: center center;
   background-size: cover;
-}
+  height: 100%;
+  overflow: hidden;
 
-@media only screen and (max-width: 400px) {
-   .bgplyer{
-    height: 60vh;
- 
-    background: no-repeat top center fixed; 
-    background-color: #0000;
-    -webkit-background-size:auto 70%;
-      -moz-background-size:auto 70%;
-      -o-background-size:auto 70%;
-      background-size:auto 70%;
-    }
 }
 
 
@@ -554,6 +540,7 @@ a:hover{
   box-shadow: 10px 10px 5px #dedede;
   margin-bottom: 15px;
   margin-top: 15px;
+  padding-top:15px;
 }
 
 
@@ -707,16 +694,7 @@ max-width: 45px;
 	width: 100%;
 	height: auto;
 	min-width: 100%;
-
 	min-height: 800px;
-
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-ms-background-size: cover;
-	-o-background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center top;
 
 
  button {
@@ -731,6 +709,7 @@ max-width: 45px;
 
 @media only screen and (max-width: 40em) { 
    .item{
+
    		min-height: 100px;
 	}
 } 
